# dtu-mlops-exam-project

./: .gitignore  CHECKLIST.md  README.md  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: linting.yaml  tests.yml
configs/: train.yaml
configs/logger/: wandb.yaml
configs/models/: ann.yaml  cnn.yaml  vit.yaml
configs/paths/: default.yaml
dockerfiles/: train.dockerfile
src/exam_project/: ann.py  config.yaml  data.py  evaluate.py  model.py  register_model.py  test.py  train.py  train_gcp.py
src/exam_project/configs/: data.yaml  train.yaml
src/exam_project/configs/hydra/: default.yaml
src/exam_project/configs/logger/: wandb.yaml
src/exam_project/configs/models/: ann.yaml  cnn.yaml  vit.yaml
src/exam_project/configs/trainer/: default.yaml
tests/: test_data.py  test_model.py
